Tweak some spacings/eyes, fix eye alignment

--- a/components/Stamp/_Stamp.scss
+++ b/components/Stamp/_Stamp.scss
@@ -30,7 +30,7 @@
         fill: none;
 
         @include mq($until: l) {
-          stroke-width: 4px;
+          stroke-width: 3px;
         }
       }
     }
